# toolshed

./: .empty  .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  TASKS.md  admin.md  package-lock.json  package.json  plain_text_transcription_jAlKYYr1bpY_1764716082.txt  plain_text_transcription_jAlKYYr1bpY_1764818496.txt  progress.md  📋 Handoff Summary: beautiful-schema-fresh-start.md
apps/speaker-diarization-benchmark/: .gitignore  Dockerfile.ground-truth-server  Dockerfile.instant-proxy  Dockerfile.instant-server  README.md  SOLUTIONS.md  VERIFICATION_GUIDE.md  add_clip_1000_1111.py  add_clip_240_180.py  add_clip_240_60.py  audio_ingestion.py  benchmark_full_video.py  benchmark_word_level.py  cleanup_manifest.py  docker-compose.yml  example_usage.py  example_verification.py  experimental_alignment.py  identification_output.txt  joe-derosa-mssp-0-60-s-verified.json  mssp-old-test-ep-01-full_transcription_mlx.json  prepare_ground_truth.py  process_new_video.py  pyproject.toml  reidentify_speakers.py  start.sh  tdd.identify.md  test_integration.sh  transcribe.py  update_manifest_structure.py  upgrade_embeddings.py  utils.py
apps/speaker-diarization-benchmark/data/: speaker_embeddings.json
apps/speaker-diarization-benchmark/docs/: maturing-audio-ingestion.md  speaker-reidentification-plan.md  upfront-embedding-extraction-plan.md
apps/speaker-diarization-benchmark/graveyard/: debug_diarize_final.txt  debug_lightning.txt  debug_lightning_final.txt  debug_mlx_final.txt  debug_output.txt  debug_output_2.txt  debug_output_3.txt  debug_output_4.txt  duplicate_clip_for_test.py  plain_text_transcription_clip_youtube_jAlKYYr1bpY_240_60_1764702802.txt  plain_text_transcription_clip_youtube_jAlKYYr1bpY_240_60_1764868922.txt  plain_text_transcription_clip_youtube_jAlKYYr1bpY_240_60_1764868976.txt  plain_text_transcription_clip_youtube_jAlKYYr1bpY_240_60_1764869016.txt  plain_text_transcription_clip_youtube_jAlKYYr1bpY_240_60_1764869071.txt  plain_text_transcription_jAlKYYr1bpY_1764717167.txt  plain_text_transcription_jAlKYYr1bpY_1764717407.txt  plain_text_transcription_jAlKYYr1bpY_1764718047.txt  plain_text_transcription_jAlKYYr1bpY_1764718071.txt  plain_text_transcription_jAlKYYr1bpY_1764718097.txt  plain_text_transcription_jAlKYYr1bpY_1764718144.txt  plain_text_transcription_jAlKYYr1bpY_1764718229.txt  plain_text_transcription_jAlKYYr1bpY_1764820125.txt  plain_text_transcription_jAlKYYr1bpY_1764820433.txt  plain_text_transcription_jAlKYYr1bpY_1764820671.txt  process_new_clip.py  test_coreml.py
apps/speaker-diarization-benchmark/ingestion/: args.py  audio_utils.py  cache.py  clustering.py  config.py  download.py  dry_run.py  health.py  (+11 more)
apps/transcriber/: api.py  batch_process.py  config_model.py  fetch_history.py  history_parser.py  instant_logger.py  instantdb_admin_client.py  investigate_whisper.py  job_model.py  process_queue.py  pyproject.toml
(+308 files in other folders)
