[project]
name = "speaker-diarization-benchmark"
version = "0.1.0"
description = "Benchmark script for comparing open source speaker diarization and identification solutions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pyannote.audio>=4.0.0",
    "whisperx>=3.1.1",
    "resemblyzer>=0.1.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "requests>=2.31.0",
    "yt-dlp>=2025.11.12",
    "pywhispercpp>=1.0.0",
    "omegaconf>=2.3.0",
    "pydantic>=2.0.0",
    "mlx-whisper>=0.0.1",
    "python-dotenv>=1.2.1",
    "deepgram-sdk>=3.0.0",
    "assemblyai>=0.33.0",
    "mlx>=0.30.0",
    "transformers>=4.57.3",
    "lightning>=2.6.0",
    "psycopg[binary]>=3.0.0",
    "pgvector>=0.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
