[project]
name = "transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "yt-dlp>=2025.11.12",
    "pywhispercpp>=1.0.0",
    "aiohttp>=3.9.0",
    "aiohttp>=3.9.0",
    "typing_extensions>=4.0.0",
    "pydantic>=2.0.0",
]
